    * Added verify-repo to gui mode.
    * Gui mode: the run checkbox is disabled for commands that do not accept --run.
    * New command fix-perm will attempt to fix permissions on stage folder before wtar and stage2svn.
    * Added help for fix-perm command.
    * wtar command now accepts the --limit option.
    * wtar command removes .DS_Store files before doing the actual wtarring.

    programmer visible changes:
    * Extended the number of variable name endings that, when read, call os.path.normpath on the value:  "_PATH", "_DIR", "_DIR_NAME", "_FILE_NAME", "_PATH__", "_DIR__", "_DIR_NAME__", "_FILE_NAME__".
    * Added  validate=False to some boto function calls to better handle certificate problems.
    * Added empty certificate to opening a URL in function open_for_read_file_or_url to better handle certificate problems.
    * When reading the local instl_config file, reading of internal variables is now allowed, to allow for simulating various situations.
    * Removed some time measuring code where it was not needed. In some places replaced time.time() with time.clock() which is (supposedly)
        more accurate on Windows.
    * Added boto to the list of maodules in import-check and in pyinstaller compilation.
    * In function InstlAdmin.should_wtar, regex self.already_wtarred_regex was change to search instead of match.

    user visible changes, client:
    * New interactive command which prints the path to currently running instl
    * During copy, on Mac OS, rsync will set permissions according to variable RSYNC_PERM_OPTIONS.  Default value is --perms --chmod=a+rw,+X.
    * Var assignments and remarks for DOS batch files will escape the '&' character.



31/5/2015 0.10.0.6

    programmer visible changes:
    * Replaced default value path_so_far=list() with path_so_far=None
    * fixed wrong parameter name on CopyTool_win_xcopy.copy_dir_files_to_dir