@@ -23,13 +23,14 @@ map_info_extension_to_format = {"txt": "text", "text": "text",
                                 "inf": "info", "info": "info",
                                 "yml": "yaml", "yaml": "yaml",
                                 "pick": "pickle", "pickl": "pickle", "pickle": "pickle",
-                                "props": "props", "prop": "props"
+                                "props": "props", "prop": "props",
+                                "file-size": "file-size"
 }
 
 
 class SVNTree(svnItem.SVNTopItem):
-    """ SVNTree inherites from SVNTopItem and adds the functionality
-        of reading and writing itself in variouse text formats:
+    """ SVNTree inherits from SVNTopItem and adds the functionality
+        of reading and writing itself in various text formats:
             info: produced by SVN's info command (read only)
             props: produced by SVN's proplist command (read only)
             text: SVNItem's native format (read and write)
@@ -42,7 +43,9 @@ class SVNTree(svnItem.SVNTopItem):
         self.read_func_by_format = {"info": self.read_from_svn_info,
                                     "text": self.read_from_text,
                                     "yaml": self.pseudo_read_from_yaml,
-                                    "props": self.read_props}
+                                    "props": self.read_props,
+                                    "file-size": self.read_file_sizes
+                                    }
 
         self.write_func_by_format = {"text": self.write_as_text,
                                      "yaml": self.write_as_yaml,
@@ -68,7 +71,7 @@ class SVNTree(svnItem.SVNTopItem):
         if a_format in self.read_func_by_format.keys():
             with open_for_read_file_or_url(self.path_to_file) as rfd:
                 logging.info("%s, a_format: %s", self.path_to_file, a_format)
-                if a_format != "props":
+                if a_format not in ("props", "file-size"):
                     self.clear_subs()
                 self.read_func_by_format[a_format](rfd)
         else:
@@ -284,6 +287,9 @@ class SVNTree(svnItem.SVNTopItem):
                     relative_path = os.path.join(root, a_file)[prefix_len:]
                     self.new_item_at_path(relative_path, "f", 0, checksum="0", create_folders=True)
 
+    def read_file_sizes(self):
+        pass
+    
 # WtarFilter is passed to SVNItem.walk_items_with_filter as the filter parameter
 # to match files that end with .wtar, .wtar.aa,...
 class WtarFilter(object):
